--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
 		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<packaging>jar</packaging>
 	<groupId>com.moonlightmoth</groupId>
 	<artifactId>housedevil.testping</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>housedevil.testping</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -33,9 +34,18 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>3.1.2</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<outputDirectory>jar</outputDirectory>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
